--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-streamlit==1.32.0
-pandas==2.2.1
-openpyxl==3.1.2
-plotly==5.19.0
-numpy==1.26.4
-kaleido==0.2.1 
+streamlit>=1.28.0
+pandas>=2.0.0
+plotly>=5.15.0
+openpyxl>=3.1.0
+numpy>=1.24.0
+pytz>=2023.3 
